--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/ladda/dist/ladda.min.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/highlightjs/styles/github.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap-csp.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/ng-tags-input/ng-tags-input.min.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/fontawesome/css/font-awesome.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/owlcarousel/owl.carousel.min.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/owlcarousel/owl.theme.default.min.css') }}">
@@ -275,6 +276,7 @@
 </div>
 <script src="{{ asset('bundles/viettutweb/bower_components/jquery/dist/jquery.min.js') }}"></script>
 <script src="{{ asset('bundles/viettutweb/bower_components/angular/angular.min.js') }}"></script>
+<script src="{{ asset('bundles/viettutweb/bower_components/ng-tags-input/ng-tags-input.min.js') }}"></script>
 <script src="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap.min.js') }}"></script>
 <script src="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js') }}"></script>
 <script src="{{ asset('bundles/viettutweb/bower_components/angular-animate/angular-animate.min.js') }}"></script>
