--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="post-content">
-                                        <h2><a href="{{ path('viettut_bundles_web_course_detail', {'hash' : course.hashTag, 'id': course.id}) }}">{{ course.title }}</a></h2>
+                                        <h2><a href="{{ path('viettut_bundles_web_course_detail', {'hash' : course.hashTag, 'id' : course.id}) }}">{{ course.title }}</a></h2>
                                         <p>{{ course.introduce | first_para }}</p>
                                     </div>
                                 </div>
@@ -51,7 +51,7 @@
                                 <div class="col-md-12">
                                     <div class="post-meta">
                                         <span><i class="fa fa-calendar"></i>{{ course.createdAt | date("m/d/Y") }}</span>
-                                        <span><i class="fa fa-user"></i> By <a href="#">{{ course.author.name }}</a> </span>
+                                        <span><i class="fa fa-user"></i> By <a href="#">{{ course.author.username }}</a> </span>
                                         <span><i class="fa fa-tag"></i> <a href="#">Duis</a>, <a href="#">News</a> </span>
                                         <span><i class="fa fa-comments"></i> <a href="#">{{ course.chapters | length }} Chapters</a></span>
                                         <a href="blog-post.html" class="btn btn-xs btn-primary pull-right">Read more...</a>
