--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
@@ -24,88 +24,10 @@
             </div>
         </div>
     </section>
-
     <div class="container">
-
         <div class="row">
-            <div class="col-md-9">
-
-                {#<h2>Right <strong>Sidebar</strong> Page</h2>#}
-
-                {#<div class="row">#}
-                    {#<div class="col-md-12">#}
-                        {#<p class="lead">#}
-                            {#Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla non pulvinar. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut eu risus enim, ut pulvinar lectus. Sed hendrerit nibh metus.#}
-                        {#</p>#}
-                    {#</div>#}
-                {#</div>#}
-
-                {#<hr class="tall">#}
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <form class="form-horizontal" role="form" name="createGuide">
-                            <div class="form-group">
-                                <label for="title">Title <span ng-show="titleValid">*</span></label>
-                                <input type="text" value="" class="form-control" name="title" id="title" ng-model="title" required>
-                            </div>
-                            <div class="form-group">
-                                <tags-input ng-model="selectedTags" on-tag-added="addTag($tag)">
-                                    <auto-complete
-                                            source="loadTags()"
-                                            min-length="1"
-                                            select-first-match="false">
-                                    </auto-complete>
-                                </tags-input>
-                                {#<tags#}
-                                    {#model="courseTags"#}
-                                    {#data-options="{addable: true, classes: {white: 'black', red: 'red'}}"#}
-                                    {#data-src="s as s.name for s in sourceTags"#}
-                                {#></tags>#}
-                            </div>
-                            <div class="form-group">
-                                <label for="image">Image *</label><br>
-                                <button type="file" ngf-select="uploadFiles($file)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB" class="btn btn-primary">Select File</button>
-                                <div class="alert alert-danger" ng-if="uploadError">
-                                    <strong>Error !</strong> <{ uploadErrorMsg }>
-                                </div>
-                                <input type="hidden" name="image" id="image" ng-model="image">
-                                <div ng-if="uploaded">
-                                    <img class="img-thumbnail" ng-src="<{ image }>" width="304">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label>Introduce *</label>
-                                <fieldset ng-if="showPreview">
-                                    <legend>Preview</legend>
-                                    <wiz-markdown content="introduce"></wiz-markdown>
-                                </fieldset>
-                                <wiz-markdown-editor content="introduce" maxlength="5000" rows="10" class="form-control" style="height: 300px;width: 100%;">
-                                    <wiz-toolbar-button command="bold"><i class="fa fa-bold" data-toggle="tooltip" data-placement="top" title="Bold"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="italic"><i class="fa fa-italic" data-toggle="tooltip" data-placement="top" title="Italic"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="heading"><i class="fa fa-header" data-toggle="tooltip" data-placement="top" title="Header"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="link"><i class="fa fa-link" data-toggle="tooltip" data-placement="top" title="Add Link"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="img"><i class="fa fa-picture-o" data-toggle="tooltip" data-placement="top" title="Add Picture"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="hr"><i class="fa fa-arrow-down" data-toggle="tooltip" data-placement="top" title="New Line"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="ullist"><i class="fa fa-list-ul" data-toggle="tooltip" data-placement="top" title="Ul List"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="ollist"><i class="fa fa-list-ol" data-toggle="tooltip" data-placement="top" title="Ol List"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="code"><i class="fa fa-code" data-toggle="tooltip" data-placement="top" title="Code"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="undo"><i class="fa fa-undo" data-toggle="tooltip" data-placement="top" title="Undo"></i></wiz-toolbar-button>
-                                    <wiz-toolbar-button command="redo"><i class="fa fa-repeat" data-toggle="tooltip" data-placement="top" title="Redo"></i></wiz-toolbar-button>
-                                </wiz-markdown-editor>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <button ladda-button="laddaLoading" data-style="slide-right" ng-disabled="!isAuthenticated && createGuide.$valid" ng-click="upload()" class="ladda-button btn-primary" style="border-radius: 5px;">Create</button>
-                                    <button ng-click="preview()" class="ladda-button btn-primary" style="border-radius: 5px;"><{ previewText }></button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
+            <div class="col-md-9" ui-view>
             </div>
-
             <div class="col-md-3">
                 <aside class="sidebar">
 
@@ -227,6 +149,8 @@
                 </aside>
             </div>
         </div>
-
     </div>
+{% endblock %}
+{% block custom %}
+    <script src="{{ asset('bundles/viettutweb/js/controller/courseRouter.js') }}"></script>
 {% endblock %}
