--- a/src/Viettut/Bundles/WebBundle/Resources/views/Authen/login.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Authen/login.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block controller %}LoginController{% endblock %}
+{% block controller %}ng-controller="LoginController"{% endblock %}
 
 {% block main %}
     <div class="container">
