--- a/src/Viettut/Bundles/WebBundle/Resources/views/Authen/register.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Authen/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block controller %}RegisterController{% endblock %}
+{% block controller %}ng-controller="RegisterController"{% endblock %}
 {% block main %}
     <div class="container">
         <div style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
