--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
@@ -1,5 +1,4 @@
 {% extends 'base.html.twig' %}
-{% block controller %}CourseController{% endblock %}
 {% block main %}
     <style>
         textarea {
@@ -25,129 +24,7 @@
         </div>
     </section>
     <div class="container">
-        <div class="row">
-            <div class="col-md-9" ui-view>
-            </div>
-            <div class="col-md-3">
-                <aside class="sidebar">
-
-                    <h4>Categories</h4>
-                    <ul class="nav nav-list primary push-bottom">
-                        <li><a href="#">Design</a></li>
-                        <li><a href="#">Photos</a></li>
-                        <li><a href="#">Videos</a></li>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Technology</a></li>
-                    </ul>
-
-                    <div class="tabs">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#popularPosts" data-toggle="tab"><i class="fa fa-star"></i> Popular</a></li>
-                            <li><a href="#recentPosts" data-toggle="tab">Recent</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="popularPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }} " alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="tab-pane" id="recentPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </aside>
-            </div>
+        <div class="row" ui-view>
         </div>
     </div>
 {% endblock %}
