--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block controller %}HomeController{% endblock %}
+{% block controller %}ng-controller="HomeController"{% endblock %}
 {% block main %}
     <section class="page-top custom-product">
         <div class="container">
